<resources>
    <string name="app_name">Earth app</string>

    <string name="task_title">Daglige Opgave:</string>
    <string name="task_title_bonus">Bonus Opgaver:</string>

    <string name="status_title">Status:</string>
    <string name="status_dry">Tørstig</string>
    <string name="status_happy">Glad</string>

    <string name="task_dry">Din avatar tørster! 250 point</string>
    <string name="task_dry_description">
        Din avatar tørster!\nSpar på vandet i dag og tag et kortere bad. Du kan optjene op til 250 point ved at tage et bad på maks 5 minutter
    </string>
    <string name="task_complete">Opgave fuldført</string>

    <string name="task_energy">Energibesparelse 140 Point</string>
    <string name="task_power_description">
        Din avatar overopheder!\nSelvom elapparater ikke er i brug, bruger de stadig strøm. Hjælp din avatar, og træk stikkene ud.
    </string>
    <string name="task_tv">TV</string>
    <string name="task_charger">Opladere</string>
    <string name="task_computer">Computer</string>
    <string name="task_games">Spillekonsol</string>
    <string name="task_light">Lys</string>
    <string name="task_kitchen">Elektrisk Køkkenudstyr</string>
    <string name="task_bathroom">Elektrisk Badeværelsesudstyr</string>

    <string name="profile_name">Annette Tester</string>
    <string name="profile_point">0000</string>
    <string name="profile_point_text">POINT</string>
    <string name="profile_badge">Badges:</string>
    <string name="profile_ranking">5 Plads</string>
    <string name="profile_school">Test Gymnasiet 2.G</string>

    <string name="tasks_title">Opgaver</string>
    <string name="tasks_bike">Cykel i skole 140 point </string>
    <string name="tasks_cup">Egen kop med i skole 140 point </string>
    <string name="tasks_sorting">Affaldssortering 140 point </string>
    <string name="tasks_shopnet">Indkøbsnet 140 point </string>
    <string name="tasks_meat">Kødfri dag 140 point </string>
    <string name="tasks_local">Spis lokalt 140 point </string>
</resources>
